Fixed to work on J2SE 1.4